--- a/app/src/main/res/layout/select_city.xml
+++ b/app/src/main/res/layout/select_city.xml
@@ -5,7 +5,8 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="45.0dip"
-        android:background="#ffcd2626" >
+        android:background="#ffcd2626"
+        android:id="@+id/navigation_bar">
         <TextView
             android:id="@+id/title_name"
             android:layout_width="fill_parent"
@@ -31,4 +32,14 @@
             android:background="#A71717"
             android:gravity="center" />
     </RelativeLayout>
+
+
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/navigation_bar"
+        android:divider="#ff000000"
+        android:dividerHeight="1px">
+    </ListView>
 </RelativeLayout>
