--- a/app/src/main/res/layout/select_city.xml
+++ b/app/src/main/res/layout/select_city.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
+        android:id="@+id/navigation_bar"
         android:layout_width="fill_parent"
         android:layout_height="45.0dip"
-        android:background="#ffcd2626"
-        android:id="@+id/navigation_bar">
+        android:background="#ffcd2626">
         <TextView
             android:id="@+id/title_name"
             android:layout_width="fill_parent"
@@ -33,11 +33,30 @@
             android:gravity="center" />
     </RelativeLayout>
 
+    <EditText
+        android:id="@+id/search_edit"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/navigation_bar"
+        android:hint="搜索全国城市"
+        android:layout_margin="10.0dip"
+        android:drawableLeft="@drawable/magnifying_glass"
+        android:drawablePadding="8.0dip"
+        android:paddingBottom="8.0dip"
+        android:paddingLeft="10.0dip"
+        android:paddingRight="30.0dip"
+        android:paddingTop="8.0dip"
+        android:singleLine="true"
+        android:background="@drawable/contact_search_box_edittext_keyword_background"
+        android:textColor="#ff000000"
+        android:textColorHint="#ffcccccc"
+        android:textSize="15.0sp"/>
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="45dip"
         android:layout_below="@+id/navigation_bar"
         android:divider="#ff000000"
         android:dividerHeight="1px">
